<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PoliceOverview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#293859"
        android:id="@+id/po1"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/upcom2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="OVERVIEW"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="27dp" />

    <ImageView
        android:id="@+id/upcom3"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/seo"
        android:layout_below="@+id/upcom2"/>

    <TextView
        android:id="@+id/po2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/po1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:text="@string/hyperlink8"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp" />
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:text="Assign police personnel for security from 25th to 28th December"
        android:textAlignment="center"
        android:layout_below="@+id/po2"
        android:id="@+id/po3"/>

    <TextView
        android:id="@+id/po4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/po3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        android:text="@string/hyperlink9"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp" />
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Provide tour and essential information to students"
        android:textAlignment="center"
        android:textSize="15dp"
        android:layout_below="@+id/po4"
        android:id="@+id/po5"/>

    <TextView
        android:id="@+id/po6"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/po5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        android:text="@string/hyperlink10"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/po7"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/po6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Meeting of all the Inspectors from the city"
        android:textAlignment="center"
        android:textSize="15dp" />


    <TextView
        android:id="@+id/po8"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/po7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:text="@string/hyperlink11"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp" />
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:text="All completed cases must be uploaded to database"
        android:textAlignment="center"
        android:layout_below="@+id/po8"
        android:id="@+id/po9"/>

    <TextView
        android:id="@+id/po10"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/po9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:text="@string/hyperlink12"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp" />
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Ensure no drinking and driving"
        android:textAlignment="center"
        android:layout_below="@+id/po10"
        android:id="@+id/po11"
        android:layout_marginTop="5dp"/>

</RelativeLayout>